@@ -54,6 +54,7 @@ Frontend:
 
 Lua:
  + Add RopeKnocking library
+ + vgtSmallDamageTag: Can change dX, dY; add screen coordinates (Frame~=0)
  * Fix crash when spawning a vgtSmallDamageTag
 
 ====================== 1.0.0 =======================
